@@ -2656,9 +2656,10 @@ argument_list|)
 expr_stmt|;
 name|old_page_size
 operator|=
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adjustment
-operator|->
-name|page_size
+argument_list|)
 expr_stmt|;
 switch|switch
 condition|(
@@ -2791,42 +2792,31 @@ literal|1.0
 expr_stmt|;
 break|break;
 block|}
+name|gtk_adjustment_configure
+argument_list|(
 name|adjustment
-operator|->
+argument_list|,
 name|value
-operator|=
-name|value
-expr_stmt|;
+argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adjustment
-operator|->
-name|page_size
-operator|=
-name|page_size
-expr_stmt|;
+argument_list|)
+argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adjustment
-operator|->
-name|step_increment
-operator|=
+argument_list|)
+argument_list|,
 name|page_size
 operator|*
 name|GRAD_SCROLLBAR_STEP_SIZE
-expr_stmt|;
-name|adjustment
-operator|->
-name|page_increment
-operator|=
+argument_list|,
 name|page_size
 operator|*
 name|GRAD_SCROLLBAR_PAGE_SIZE
-expr_stmt|;
-name|gtk_adjustment_changed
-argument_list|(
-name|GTK_ADJUSTMENT
-argument_list|(
-name|editor
-operator|->
-name|scroll_data
-argument_list|)
+argument_list|,
+name|page_size
 argument_list|)
 expr_stmt|;
 block|}
@@ -3979,9 +3969,10 @@ name|GDK_SCROLL_UP
 case|:
 name|value
 operator|-=
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 expr_stmt|;
@@ -3991,9 +3982,10 @@ name|GDK_SCROLL_DOWN
 case|:
 name|value
 operator|+=
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 expr_stmt|;
@@ -4007,17 +3999,20 @@ name|CLAMP
 argument_list|(
 name|value
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|gtk_adjustment_set_value
@@ -4827,15 +4822,17 @@ name|GDK_SCROLL_UP
 operator|)
 condition|?
 operator|-
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 else|:
+name|gtk_adjustment_get_page_increment
+argument_list|(
 name|adj
-operator|->
-name|page_increment
+argument_list|)
 operator|/
 literal|2
 operator|)
@@ -4847,17 +4844,20 @@ name|CLAMP
 argument_list|(
 name|new_value
 argument_list|,
+name|gtk_adjustment_get_lower
+argument_list|(
 name|adj
-operator|->
-name|lower
+argument_list|)
 argument_list|,
+name|gtk_adjustment_get_upper
+argument_list|(
 name|adj
-operator|->
-name|upper
+argument_list|)
 operator|-
+name|gtk_adjustment_get_page_size
+argument_list|(
 name|adj
-operator|->
-name|page_size
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|gtk_adjustment_set_value
