@@ -1,5 +1,9 @@
 2009-03-23  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpgradienteditor.c: use GtkAdjustment's accessors.
+
+2009-03-23  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdnd.c (gimp_dnd_data_drop_handle): use
 	GtkSelectionData's accessors.
 
